Compact .kb to reference cards
The knowledge base had grown into essays: dated experiment narratives, benchmark
tables that only justified a past decision, alternatives-considered passages and
per-backend walkthroughs, on top of the invariants themselves. Rewrite every topic
file as a reference card -- the invariant, the identifiers a reader needs to find
the code, the traps as one-liners, and the pinning tests.

What went: `.todo/NNN` provenance, dated measurements, rationale and decision
records, step-by-step mechanics of a class the file already names, per-backend
walkthroughs collapsed to one line, edge-case enumerations, sample programs and
command transcripts. What stayed: every invariant, every Java/Lisp/CLI identifier
and file path, load-bearing constants, ordering constraints, cross-references and
test names.

README.md becomes an index rather than a summary: one line per file. It also loses
a duplicate `vec.md` entry.

3.66 MB -> 1.42 MB over 128 files. The floor is identifier density, not prose --
the files that stop near 45% are the ones whose surviving lines are mostly class,
constant and test names.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CQqA6EwBPS19KyaGJCgGyA